--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Replace this line with your name
-description: A template for your AOS C111/204 project site.
+title: Jennifer Gipson
+description: AOS C111 project site.
 logo: /assets/IMG/template_logo.png
 show_downloads: true
 theme: jekyll-theme-modernist
