--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: Jennifer Gipson
 description: AOS C111 project site.
 logo: /assets/IMG/template_logo.png
 show_downloads: true
-theme: jekyll-theme-modernist
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
