--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jennifer Gipson
-description: AOS C111 project site.
+description: Machine Learning Modeling of Teachers’ Experiences and Joy
 logo: /assets/IMG/template_logo.png
-show_downloads: true
+show_downloads: false
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
