Swap title and description in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Jennifer Gipson
-description: Machine Learning Modeling of Teachers’ Experiences and Joy
+title: Machine Learning Modeling of Teachers’ Experiences and Joy
+description: Jennifer Gipson
 logo: /assets/IMG/template_logo.png
 show_downloads: false
 remote_theme: pages-themes/architect@v0.2.0
